# StockTracker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  docker-compose.yml
.github/workflows/: ci.yml
StockTracker.Collector/: .dockerignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  env.sample  pyproject.toml  requirements-dev.txt  requirements.txt
StockTracker.Collector/src/: __init__.py  advanced_usage.py  app.py  config.py  logging.py  orchestrator.py
StockTracker.Collector/src/collectors/: api_collector.py  library_collector.py  web_collector.py
StockTracker.Collector/src/core/: base.py  config.py  models.py
StockTracker.Collector/src/senders/: api_sender.py  message_broker_sender.py
StockTracker.Collector/src/utils/: async_manager.py  rate_limiter.py
StockTracker.Collector/tests/: test_smoke.py
